codama-macros/tests/codama_attribute/values_nodes/account_bump_value_node/missing_name.fail.stderr
error: expected a list: `account_bump(...)` or `account_bump = (...)`
 --> tests/codama_attribute/values_nodes/account_bump_value_node/missing_name.fail.rs:3:26
  |
3 | #[codama(default_value = account_bump)]
  |                          ^^^^^^^^^^^^

error: name is missing
 --> tests/codama_attribute/values_nodes/account_bump_value_node/missing_name.fail.rs:6:26
  |
6 | #[codama(default_value = account_bump())]
  |                          ^^^^^^^^^^^^^^
