codama-macros/tests/codama_attribute/values_nodes/account_bump_value_node/missing_name.fail.rs
use codama_macros::codama;

#[codama(default_value = account_bump)]
pub struct Test;

#[codama(default_value = account_bump())]
pub struct TestWithBraces;

fn main() {}
